--- a/packages/components/bolt-video/src/_video.scss
+++ b/packages/components/bolt-video/src/_video.scss
@@ -56,7 +56,7 @@ $bolt-video-wrapper--max-width: bolt-breakpoint(xxlarge);
 
 .c-bolt-video__close-button {
   color: bolt-color(orange);
-  --bolt-color-icon: bolt-color(orange);
+  --bolt-theme-icon: bolt-color(orange);
 
   position: absolute;
   z-index: bolt-z-index('tooltip');
