--- a/packages/components/bolt-form/src/form.scss
+++ b/packages/components/bolt-form/src/form.scss
@@ -88,6 +88,7 @@ $bolt-input-background-color--disabled: bolt-color(gray, xlight);
 $bolt-input-placeholder-color: rgba(bolt-color(gray, xdark), 0.5); // TODO: [Mai] This is the theme text color at 66%
 $bolt-input-placeholder-color--invalid: bolt-color(error); // TODO: [Mai] This is the theme error color
 $bolt-input-placeholder-color--disabled: rgba(bolt-color(gray, xdark), 0.5); // TODO: [Mai] This is the theme text color at 66%
+$bolt-input-icon-color--active: bolt-color(indigo, light);
 $bolt-input-icon-color--invalid: bolt-color(error);
 $bolt-input-border-color: rgba(bolt-color(indigo, light), 0.25); // TODO: [Mai] This is the theme link color at 25%
 $bolt-input-border-color--focus: bolt-color(indigo, light); // TODO: [Mai] This is the theme link color
@@ -365,6 +366,14 @@ $bolt-input-transition: $bolt-transition;
     height: 100%;
     content: '';
     background: linear-gradient(to left, $bolt-input-background-color, rgba(255, 255, 255, 0));
+  }
+}
+
+.c-bolt-input:focus,
+.c-bolt-custom-input.is-active {
+  & ~ .c-bolt-input-icons {
+    color: $bolt-input-icon-color--active;
+    --bolt-theme-icon: $bolt-input-icon-color--active;
   }
 }
 
