WIP - stashing latest

--- a/packages/components/bolt-nav-bar/src/nav-bar.scss
+++ b/packages/components/bolt-nav-bar/src/nav-bar.scss
@@ -95,7 +95,7 @@ bolt-nav-list {
   position: relative;
   list-style: none;
 
-  @include respond-to(medium) {
+  @include respond-to(small) {
     flex-direction: row;
   }
 
