--- a/packages/components/bolt-form/src/inputs/form-checkboxes.twig
+++ b/packages/components/bolt-form/src/inputs/form-checkboxes.twig
@@ -9,6 +9,8 @@
  */
 #}
 
+{% set attributes = create_attribute(attributes | default({})) %}
+
 {% set classes = [
   'c-bolt-input-list',
   'c-bolt-input-list--stack-spacing-none'
